<resources>
    <string name="app_name">Care</string>
    <string name="alt_logo">Logo</string>
    <string name="senha_text">Senha</string>
    <string name="consenha_text">Confirmar senha</string>
    <string name="cadastro_text">Cadastro</string>
    <string name="email_text">Email</string>
    <string name="user_text">Nome completo</string>
    <string name="login_button_text">Entrar</string>
    <string name="login_text"> Login</string>
    <string name="cadastro">Não possui uma conta?</string>
    <string name="login">Já possui uma conta?</string>
    <string name="data_nascimento">Data de nascimento</string>
    <string name="cadastro_button_text">Cadastrar-se</string>
    <string name="username">Ágata Gonçalves</string>
    <string name="useremail">saraagata09@gmail.com</string>
    <string name="userdate">13/10/2006</string>
    <string-array name="tipos_locais">
    <item>Hospital</item>
    <item>Clínica</item>
    <item>Centro Médico</item>
    </string-array>
    <string-array name="niveis_af">
        <item>Sedentário</item>
        <item>Leve</item>
        <item>Moderada</item>
        <item>Alta</item>
        <item>Muito alta</item>
    </string-array>
</resources>