<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/blue">

    <View
        android:id="@+id/view"
        android:layout_width="407dp"
        android:layout_height="569dp"
        android:background="@drawable/shape_card_corner"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.666"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/logoText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/libre_baskerville"
        android:text="@string/cadastro_text"
        android:textColor="@color/blue"
        android:textSize="34sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/view"
        app:layout_constraintVertical_bias="0.029" />

    <EditText
        android:id="@+id/emailInput"
        android:layout_width="308dp"
        android:layout_height="39dp"
        android:layout_marginStart="4dp"
        android:autofillHints="emailAddress"
        android:ems="10"
        android:fontFamily="@font/libre_baskerville"
        android:hint="@string/email_text"
        android:inputType="textEmailAddress"
        android:textColor="#000000"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.382"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/view"
        app:layout_constraintVertical_bias="0.42" />

    <TextView
        android:id="@+id/passwordText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:fontFamily="@font/libre_baskerville"
        android:text="@string/senha_text"
        android:textColor="#000000"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="@+id/passwordInput"
        app:layout_constraintTop_toTopOf="@+id/view"
        app:layout_constraintVertical_bias="0.655" />

    <EditText
        android:id="@+id/passwordInput"
        android:layout_width="308dp"
        android:layout_height="39dp"
        android:layout_marginStart="4dp"
        android:ems="10"
        android:fontFamily="@font/libre_baskerville"
        android:hint="@string/senha_text"
        android:inputType="textPassword"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/view"
        app:layout_constraintHorizontal_bias="0.363"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/view"
        app:layout_constraintVertical_bias="0.734" />

    <Button
        android:id="@+id/cadastrarButton"
        android:layout_width="160dp"
        android:layout_height="50dp"
        android:background="@drawable/botao_redondo"
        android:text="@string/cadastro_button_text"
        android:textColor="#FFFFFF"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.501"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/passwordInput"
        app:layout_constraintVertical_bias="0.427" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:layout_marginTop="188dp"
        android:text="@string/email_text"
        android:textColor="@color/preto"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@+id/emailInput"
        app:layout_constraintTop_toTopOf="@+id/view" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:layout_marginTop="272dp"
        android:fontFamily="@font/libre_baskerville"
        android:text="@string/data_nascimento"
        android:textColor="@color/preto"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@+id/etdata"
        app:layout_constraintTop_toTopOf="@+id/view" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:layout_marginTop="92dp"
        android:fontFamily="@font/libre_baskerville"
        android:text="@string/user_text"
        android:textColor="@color/preto"
        android:textSize="20sp"

        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@+id/UserNameInput"
        app:layout_constraintTop_toTopOf="@+id/view" />

    <EditText
        android:id="@+id/UserNameInput"
        android:layout_width="308dp"
        android:layout_height="39dp"
        android:layout_marginStart="4dp"
        android:layout_marginTop="136dp"
        android:ems="10"
        android:autofillHints="name"
        android:fontFamily="@font/libre_baskerville"
        android:inputType="text"
        android:hint="@string/user_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.363"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/view" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="273dp"
        android:layout_height="143dp"
        android:src="@drawable/logo"
        android:contentDescription="@string/alt_logo"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.015" />


    <ImageView
        android:id="@+id/buttonMostrar"
        android:layout_width="31dp"
        android:layout_height="25dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:src="@drawable/eyeopen"
        app:layout_constraintBottom_toBottomOf="@+id/passwordInput"
        app:layout_constraintEnd_toEndOf="@+id/passwordInput" />

    <ImageView
        android:id="@+id/btnEsconder"
        android:layout_width="31dp"
        android:layout_height="25dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:src="@drawable/eye_closed_svgrepo_com"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="@+id/passwordInput"
        app:layout_constraintEnd_toEndOf="@+id/passwordInput" />

    <EditText
        android:id="@+id/etdata"
        android:layout_width="308dp"
        android:layout_height="39dp"
        android:layout_marginStart="4dp"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:hint="Data de nascimento"
        android:inputType="date"
        app:layout_constraintBottom_toBottomOf="@+id/view"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.358"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2"
        app:layout_constraintVertical_bias="0.0" />

</androidx.constraintlayout.widget.ConstraintLayout>