<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/blue">

    <View
        android:id="@+id/view"
        android:layout_width="400dp"
        android:layout_height="515dp"
        android:background="@drawable/shape_card_corner"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.666"
        app:layout_constraintStart_toStartOf="parent" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="279dp"
        android:layout_height="167dp"
        android:layout_marginTop="28dp"
        android:contentDescription="@string/alt_logo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:src="@drawable/logo"/>

    <TextView
        android:id="@+id/logoText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/libre_baskerville"
        android:text="Esqueceu sua senha?"
        android:textColor="@color/blue"
        android:textSize="30sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/view"
        app:layout_constraintVertical_bias="0.065" />

    <TextView
        android:id="@+id/emailText"
        android:layout_width="71dp"
        android:layout_height="27dp"
        android:layout_marginStart="4dp"
        android:layout_marginTop="180dp"
        android:fontFamily="@font/libre_baskerville"
        android:text="@string/email_text"
        android:textColor="#000000"
        android:textSize="20sp"
        android:textStyle="normal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/emailInput"
        app:layout_constraintTop_toTopOf="@+id/view" />


    <EditText
        android:id="@+id/emailInput"
        android:layout_width="317dp"
        android:layout_height="51dp"
        android:layout_marginStart="4dp"
        android:autofillHints="emailAddress"
        android:ems="10"
        android:fontFamily="sans-serif"
        android:hint="@string/email_text"
        android:inputType="textEmailAddress"
        android:textColor="#000000"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.347"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/view"
        app:layout_constraintVertical_bias="0.465" />

    <TextView
        android:id="@+id/passwordText"
        android:layout_width="71dp"
        android:layout_height="27dp"
        android:layout_marginStart="4dp"
        android:layout_marginTop="288dp"
        android:fontFamily="@font/libre_baskerville"
        android:text="@string/senha_text"
        android:textColor="#000000"
        android:textSize="20sp"
        android:textStyle="normal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/passwordInput"
        app:layout_constraintTop_toTopOf="@+id/view" />

    <EditText
        android:id="@+id/passwordInput"
        android:layout_width="317dp"
        android:layout_height="51dp"
        android:layout_marginStart="4dp"
        android:autofillHints="password"
        android:ems="10"
        android:fontFamily="sans-serif"
        android:hint="@string/senha_text"
        android:inputType="textPassword"
        android:textColor="#000000"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.347"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/view"
        app:layout_constraintVertical_bias="0.693" />

    <Button
        android:id="@+id/redefinirButton"
        android:layout_width="182dp"
        android:layout_height="63dp"
        android:layout_marginBottom="56dp"
        android:background="@drawable/botao_redondo"
        android:text="Redefinir"
        android:textColor="#FFFFFF"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="337dp"
        android:layout_height="71dp"
        android:layout_marginTop="12dp"
        android:fontFamily="@font/libre_baskerville"
        android:text="Informe seu e-mail cadastrado e a nova senha para a redefinição de senha."
        android:textColor="@color/black"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.52"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/logoText" />

    <ImageView
        android:id="@+id/buttonMostrar"
        android:layout_width="31dp"
        android:layout_height="25dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:src="@drawable/eyeopen"
        app:layout_constraintBottom_toBottomOf="@+id/passwordInput"
        app:layout_constraintEnd_toEndOf="@+id/passwordInput" />

    <ImageView
        android:id="@+id/btnEsconder"
        android:layout_width="31dp"
        android:layout_height="25dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:src="@drawable/eye_closed_svgrepo_com"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="@+id/passwordInput"
        app:layout_constraintEnd_toEndOf="@+id/passwordInput" />



</androidx.constraintlayout.widget.ConstraintLayout>